Login Member dan Karyawan

--- a/asset/assets/assets/css/style_presensi_karyawan.css
+++ b/asset/assets/assets/css/style_presensi_karyawan.css
@@ -27,6 +27,12 @@ html, body, * {
     align-content: center;
     padding-top: 20px;
 }
+
+form {
+    justify-content: center;
+    align-items: center;
+}
+
 .checkId {
     width: 180px;
     height: 50px;
