--- a/asset/assets/assets/css/style_presensi_karyawan.css
+++ b/asset/assets/assets/css/style_presensi_karyawan.css
@@ -53,7 +53,30 @@ form {
     height: 30px;
     text-align: center;
     padding: 10px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 8px;
     display:inline-block;
+}
+
+label.error {
+    color: red;
+    font-size: 1rem;
+    display: block;
+    margin-top: 5px;
+    border: 2px solid red;
+    border-radius: 4px;
+    line-height: 1;
+    padding: 2px 0 6px 6px;
+    background: #ffe6eb;
+}
+
+input.error {
+    border: 1px dashed red;
+    font-weight: 300;
+    color: red;
+}
+
+input.valid{
+    border: 2px solid #4CAF50;
+    color: green;
 }
