--- a/asset/assets/assets/css/style_pemesanan_customer.css
+++ b/asset/assets/assets/css/style_pemesanan_customer.css
@@ -76,6 +76,7 @@
       -webkit-transition: all 0.3 ease;
       transition: all 0.3 ease;
       cursor: pointer;
+      /* margin-top: 50px; */
     }
     .form button:hover,.form button:active,.form button:focus {
       background: #43A047;
@@ -93,5 +94,8 @@
       clear: both;
     }
 
+    .form-group{
+
+    }
 
     
