--- a/asset/assets/assets/css/style.css
+++ b/asset/assets/assets/css/style.css
@@ -385,7 +385,7 @@ section {
   margin: 0;
   font-size: 48px;
   font-weight: 700;
-  color: #012970;
+  color: #1e5128;
 }
 .hero h2 {
   color: #444444;
