--- a/admingreen/asset/assets/css/sb-admin-2.css
+++ b/admingreen/asset/assets/css/sb-admin-2.css
@@ -26,7 +26,7 @@
   --gray-dark: #5a5c69;
   --primary: #4e73df;
   --secondary: #858796;
-  --success: #1cc88a;
+  --success: #1e5128;
   --info: #36b9cc;
   --warning: #f6c23e;
   --danger: #e74a3b;
@@ -9912,8 +9912,8 @@ a:focus {
 }
 
 .bg-gradient-success {
-  background-color: #1cc88a;
-  background-image: linear-gradient(180deg, #1cc88a 10%, #13855c 100%);
+  background-color: #1e5128;
+  background-image: linear-gradient(180deg, #1e5128 10%, #1e5128 100%);
   background-size: cover;
 }
 
